# MicroService.LocalStorage

server/: CMakeLists.txt  ReadMe.txt  main.cpp
server/source/: LocalStorageService.cpp  LocalStorageService.h
server/source/Command/: LocalStorageCmd.cpp  LocalStorageCmd.hpp
server/source/DataBase/: DatabaseProxy.cpp  DatabaseProxy.h
